--- a/src/main/resources/assets/gregtech/lang/en_US.lang
+++ b/src/main/resources/assets/gregtech/lang/en_US.lang
@@ -128,11 +128,11 @@ GT5U.config.colormodulation.machine_metal.G=Green
 GT5U.config.colormodulation.machine_metal.R=Red
 GT5U.config.preference=Client Preference
 GT5U.config.preference.mInputBusInitialFilter=Input Bus Initial Input Filter Status
-GT5U.config.preference.mInputBusInitialFilter.tooltip=Whether Input busses enable the input filter upon placed\\nDoes not affect busses placed by others\\nDoes not affect existing busses
+GT5U.config.preference.mInputBusInitialFilter.tooltip=Whether Input busses enable the input filter upon placed\nDoes not affect busses placed by others\nDoes not affect existing busses
 GT5U.config.preference.mSingleBlockInitialAllowMultiStack=Single Block Initial MultiStack Input Status
-GT5U.config.preference.mSingleBlockInitialAllowMultiStack.tooltip=Whether single block machines enable multistack input upon placed\\nDoes not affect busses placed by others\\nDoes not affect existing busses
+GT5U.config.preference.mSingleBlockInitialAllowMultiStack.tooltip=Whether single block machines enable multistack input upon placed\nDoes not affect busses placed by others\nDoes not affect existing busses
 GT5U.config.preference.mSingleBlockInitialFilter=Single Block Initial Input Filter Status
-GT5U.config.preference.mSingleBlockInitialFilter.tooltip=Whether single block machines enable the input filter upon placed\\nDoes not affect busses placed by others\\nDoes not affect existing busses
+GT5U.config.preference.mSingleBlockInitialFilter.tooltip=Whether single block machines enable the input filter upon placed\nDoes not affect busses placed by others\nDoes not affect existing busses
 GT5U.config.render=Rendering
 GT5U.config.render.GlowTextures=Use Glowing Textures
 GT5U.config.render.RenderDirtParticles=Render Dirt Particles
