Add in game GUI to configure client preference (#852)
* Add in game GUI to configure client preference

* Fix backslash

--- a/src/main/resources/assets/gregtech/lang/en_US.lang
+++ b/src/main/resources/assets/gregtech/lang/en_US.lang
@@ -113,6 +113,34 @@ GT5U.multiblock.problems=Problems
 GT5U.multiblock.mei=Max Energy Income
 GT5U.multiblock.usage=Probably uses
 
+GT5U.config.colormodulation=Color Modulator
+GT5U.config.colormodulation.cable_insulation=Cable Insulation
+GT5U.config.colormodulation.cable_insulation.B=Blue
+GT5U.config.colormodulation.cable_insulation.G=Green
+GT5U.config.colormodulation.cable_insulation.R=Red
+GT5U.config.colormodulation.construction_foam=Construction Foam
+GT5U.config.colormodulation.construction_foam.B=Blue
+GT5U.config.colormodulation.construction_foam.G=Green
+GT5U.config.colormodulation.construction_foam.R=Red
+GT5U.config.colormodulation.machine_metal=Machine Metal (Default GUI color)
+GT5U.config.colormodulation.machine_metal.B=Blue
+GT5U.config.colormodulation.machine_metal.G=Green
+GT5U.config.colormodulation.machine_metal.R=Red
+GT5U.config.preference=Client Preference
+GT5U.config.preference.mInputBusInitialFilter=Input Bus Initial Input Filter Status
+GT5U.config.preference.mInputBusInitialFilter.tooltip=Whether Input busses enable the input filter upon placed\nDoes not affect busses placed by others\nDoes not affect existing busses
+GT5U.config.preference.mSingleBlockInitialAllowMultiStack=Single Block Initial MultiStack Input Status
+GT5U.config.preference.mSingleBlockInitialAllowMultiStack.tooltip=Whether single block machines enable multistack input upon placed\nDoes not affect busses placed by others\nDoes not affect existing busses
+GT5U.config.preference.mSingleBlockInitialFilter=Single Block Initial Input Filter Status
+GT5U.config.preference.mSingleBlockInitialFilter.tooltip=Whether single block machines enable the input filter upon placed\nDoes not affect busses placed by others\nDoes not affect existing busses
+GT5U.config.render=Rendering
+GT5U.config.render.GlowTextures=Use Glowing Textures
+GT5U.config.render.RenderDirtParticles=Render Dirt Particles
+GT5U.config.render.RenderFlippedMachinesFlipped=Render flipped machines with flipped textures
+GT5U.config.render.RenderIndicatorsOnHatch=Render indicator on hatch
+GT5U.config.render.RenderPollutionFog=Render pollution fog
+GT5U.config.render.TileAmbientOcclusion=Enable Ambient Occlusion
+
 achievement.Naquadah=Find Naquadah Ore
 achievement.Naquadah.desc=Height: 10-90, Chance: 10, Asteroids/Venus/Titan/Oberon/Pluto/KuiperBelt/VegaB/BarnardE/BarnardF//
 achievement.NaquadahEnriched=Find Enriched Naquadah Ore
