--- a/src/main/resources/assets/gregtech/lang/en_US.lang
+++ b/src/main/resources/assets/gregtech/lang/en_US.lang
@@ -23,7 +23,7 @@ GTPP.multiblock.duration=Duration
 
 GTPP.CC.machinetier=Control Core Tier
 GTPP.CC.discount=EU Discount
-GTPP.CC.parallel=Maximum Parallel Processing
+GTPP.CC.parallel=Maximum Parallel
 
 //Tooltips for the Charger Packs
 GTPP.battpack.tooltip.1=Worn as a Belt within Baubles
