Wordy tooltips -> extended tooltips (clearer)

--- a/src/main/resources/assets/gregtech/lang/en_US.lang
+++ b/src/main/resources/assets/gregtech/lang/en_US.lang
@@ -89,24 +89,24 @@ GT5U.machines.select_circuit.tooltip.2=§7Shift left click to open GUI
 GT5U.machines.select_circuit.tooltip.3=§7Shift right click to clear
 GT5U.machines.extra_tooltips_toggle.tooltip=Additional information
 GT5U.machines.fluid_transfer.tooltip=Fluid Auto-Output
-GT5U.machines.fluid_transfer.tooltip.wordy=§6Screwdriver:§7 Right click machine to
-GT5U.machines.fluid_transfer.tooltip.wordy.1=§7toggle output-side item input; with
-GT5U.machines.fluid_transfer.tooltip.wordy.2=§7shift to toggle the input filter.
-GT5U.machines.fluid_transfer.tooltip.wordy.3=§6Soldering iron:§7 Right click to toggle
-GT5U.machines.fluid_transfer.tooltip.wordy.4=§7redstone strength; also hold
-GT5U.machines.fluid_transfer.tooltip.wordy.5=§7shift to toggle multi-stack input.
+GT5U.machines.fluid_transfer.tooltip.extended=§6Screwdriver:§7 Right click machine to
+GT5U.machines.fluid_transfer.tooltip.extended.1=§7toggle output-side item input; with
+GT5U.machines.fluid_transfer.tooltip.extended.2=§7shift to toggle the input filter.
+GT5U.machines.fluid_transfer.tooltip.extended.3=§6Soldering iron:§7 Right click to toggle
+GT5U.machines.fluid_transfer.tooltip.extended.4=§7redstone strength; also hold
+GT5U.machines.fluid_transfer.tooltip.extended.5=§7shift to toggle multi-stack input.
 GT5U.machines.item_transfer.tooltip=Item Auto-Output
-GT5U.machines.item_transfer.tooltip.wordy=§6Screwdriver:§7 Right click machine to
-GT5U.machines.item_transfer.tooltip.wordy.1=§7toggle output-side item input; with
-GT5U.machines.item_transfer.tooltip.wordy.2=§7shift to toggle the input filter.
-GT5U.machines.item_transfer.tooltip.wordy.3=§6Soldering iron:§7 Right click to toggle
-GT5U.machines.item_transfer.tooltip.wordy.4=§7redstone strength; also hold
-GT5U.machines.item_transfer.tooltip.wordy.5=§7shift to toggle multi-stack input.
+GT5U.machines.item_transfer.tooltip.extended=§6Screwdriver:§7 Right click machine to
+GT5U.machines.item_transfer.tooltip.extended.1=§7toggle output-side item input; with
+GT5U.machines.item_transfer.tooltip.extended.2=§7shift to toggle the input filter.
+GT5U.machines.item_transfer.tooltip.extended.3=§6Soldering iron:§7 Right click to toggle
+GT5U.machines.item_transfer.tooltip.extended.4=§7redstone strength; also hold
+GT5U.machines.item_transfer.tooltip.extended.5=§7shift to toggle multi-stack input.
 GT5U.machines.battery_slot.tooltip=Power Slot
 GT5U.machines.battery_slot.tooltip.1=§7Draws from %1$s§7 batteries
 GT5U.machines.battery_slot.tooltip.2=§7Charges %1$s§7 tools & batteries
-GT5U.machines.battery_slot.tooltip.wordy=§4Caution:§7 Will violently explode if
-GT5U.machines.battery_slot.tooltip.wordy.1=§7fed %2$s§7+ power through cables.
+GT5U.machines.battery_slot.tooltip.extended=§4Caution:§7 Will violently explode if
+GT5U.machines.battery_slot.tooltip.extended.1=§7fed %2$s§7+ power through cables.
 GT5U.machines.battery_slot.tooltip.alternative=Power Slot
 GT5U.machines.battery_slot.tooltip.alternative.1=%1$s§7 voltage? You don't need tooltips.
 GT5U.machines.special_slot.tooltip=Data Slot
@@ -124,14 +124,14 @@ GT5U.machines.stalled_stuttering.tooltip=§4Stalled: Insufficient %1$s§4!
 GT5U.machines.stalled_stuttering.tooltip.1=§7Provide %1$s§7 consistently
 GT5U.machines.stalled_stuttering.tooltip.2=§7for the entire duration of
 GT5U.machines.stalled_stuttering.tooltip.3=§7the recipe to complete it.
-GT5U.machines.stalled_stuttering.tooltip.wordy=§7Progress was lost, but not
-GT5U.machines.stalled_stuttering.tooltip.wordy.1=§7the recipe's output.
+GT5U.machines.stalled_stuttering.tooltip.extended=§7Progress was lost, but not
+GT5U.machines.stalled_stuttering.tooltip.extended.1=§7the recipe's output.
 GT5U.machines.stalled_vent.tooltip=§4Stalled: Cannot vent steam!
 GT5U.machines.stalled_vent.tooltip.1=§7Right-click with a wrench to 
 GT5U.machines.stalled_vent.tooltip.2=§7point this machine's steam 
 GT5U.machines.stalled_vent.tooltip.3=§7vent towards an empty space.
-GT5U.machines.stalled_vent.tooltip.wordy=§7Progress was lost, but not
-GT5U.machines.stalled_vent.tooltip.wordy.1=§7the recipe's output.
+GT5U.machines.stalled_vent.tooltip.extended=§7Progress was lost, but not
+GT5U.machines.stalled_vent.tooltip.extended.1=§7the recipe's output.
 
 GT5U.gui.select.current=Current:
 
@@ -175,9 +175,9 @@ GT5U.config.colormodulation.machine_metal.G=Green
 GT5U.config.colormodulation.machine_metal.R=Red
 GT5U.config.interface=Interface
 GT5U.config.interface.TooltipVerbosity=Tooltip verbosity (See details)
-GT5U.config.interface.TooltipVerbosity.tooltip=How wordy should GregTech interface tooltips be?\n0: No tooltips\n1: One line tooltips only\n2: Normal tooltips [DEFAULT]\n3+: Wordy tooltips
+GT5U.config.interface.TooltipVerbosity.tooltip=How verbose should GregTech interface tooltips be?\n0: No tooltips\n1: One line tooltips only\n2: Normal tooltips [DEFAULT]\n3+: Extended tooltips
 GT5U.config.interface.TooltipShiftVerbosity=Tooltip verbosity (LSHIFT Down)
-GT5U.config.interface.TooltipShiftVerbosity.tooltip=How wordy should GregTech interface tooltips be when LSHIFT is held down?\n0: No tooltips\n1: One line tooltips only\n2: Normal tooltips\n3+: Wordy tooltips [DEFAULT]
+GT5U.config.interface.TooltipShiftVerbosity.tooltip=How verbose should GregTech interface tooltips be when LSHIFT is held down?\n0: No tooltips\n1: One line tooltips only\n2: Normal tooltips\n3+: Extended tooltips [DEFAULT]
 GT5U.config.preference=Client Preference
 GT5U.config.preference.mInputBusInitialFilter=Input Bus Initial Input Filter Status
 GT5U.config.preference.mInputBusInitialFilter.tooltip=Whether Input busses enable the input filter upon placed\nDoes not affect busses placed by others\nDoes not affect existing busses
