--- a/src/main/resources/assets/goodgenerator/lang/en_US.lang
+++ b/src/main/resources/assets/goodgenerator/lang/en_US.lang
@@ -260,7 +260,7 @@ YOTTank.hint.2=16x Borosilicate Glass Block of the same tier for every layer
 YOTTank.hint.3=9x Fluid Cell Block for every layer
 YOTTank.hint.4=1 - Input Hatch/YOTTank Casing
 YOTTank.hint.5=2 - Maintenance Hatch/YOTTank Casing
-YOTTank.hint.6=3 - Output Hatch
+YOTTank.hint.6=3 - Output Hatch/YOTHatch
 
 #Chat
 largeessentiagenerator.chat= Installed!
