--- a/src/main/resources/assets/gregtech/lang/en_US.lang
+++ b/src/main/resources/assets/gregtech/lang/en_US.lang
@@ -73,6 +73,8 @@ GT5U.machines.radius=radius
 GT5U.machines.blocks=Blocks
 GT5U.machines.chunks=Chunks
 GT5U.machines.miner=Miner
+GT5U.machines.powersource.power=power
+GT5U.machines.powersource.steam=steam
 GT5U.machines.pump=Pump
 GT5U.machines.separatebus=Input buses are separated
 GT5U.machines.pumpareaset=Pumping area set to
@@ -85,6 +87,51 @@ GT5U.machines.select_circuit.tooltip=Ghost Circuit Slot
 GT5U.machines.select_circuit.tooltip.1=§7LMB/RMB/scroll to cycle through the list
 GT5U.machines.select_circuit.tooltip.2=§7Shift left click to open GUI
 GT5U.machines.select_circuit.tooltip.3=§7Shift right click to clear
+GT5U.machines.extra_tooltips_toggle.tooltip=Additional information
+GT5U.machines.fluid_transfer.tooltip=Fluid Auto-Output
+GT5U.machines.fluid_transfer.tooltip.extended=§6Screwdriver:§7 Right click machine to
+GT5U.machines.fluid_transfer.tooltip.extended.1=§7toggle output-side item input; with
+GT5U.machines.fluid_transfer.tooltip.extended.2=§7shift to toggle the input filter.
+GT5U.machines.fluid_transfer.tooltip.extended.3=§6Soldering iron:§7 Right click to toggle
+GT5U.machines.fluid_transfer.tooltip.extended.4=§7redstone strength; also hold
+GT5U.machines.fluid_transfer.tooltip.extended.5=§7shift to toggle multi-stack input.
+GT5U.machines.item_transfer.tooltip=Item Auto-Output
+GT5U.machines.item_transfer.tooltip.extended=§6Screwdriver:§7 Right click machine to
+GT5U.machines.item_transfer.tooltip.extended.1=§7toggle output-side item input; with
+GT5U.machines.item_transfer.tooltip.extended.2=§7shift to toggle the input filter.
+GT5U.machines.item_transfer.tooltip.extended.3=§6Soldering iron:§7 Right click to toggle
+GT5U.machines.item_transfer.tooltip.extended.4=§7redstone strength; also hold
+GT5U.machines.item_transfer.tooltip.extended.5=§7shift to toggle multi-stack input.
+GT5U.machines.battery_slot.tooltip=Power Slot
+GT5U.machines.battery_slot.tooltip.1=§7Draws from %1$s§7 batteries
+GT5U.machines.battery_slot.tooltip.2=§7Charges %1$s§7 tools & batteries
+GT5U.machines.battery_slot.tooltip.extended=§4Caution:§7 Will violently explode if
+GT5U.machines.battery_slot.tooltip.extended.1=§7fed %2$s§7+ power through cables.
+GT5U.machines.battery_slot.tooltip.alternative=Power Slot
+GT5U.machines.battery_slot.tooltip.alternative.1=%1$s§7 voltage? You don't need tooltips.
+GT5U.machines.special_slot.tooltip=Data Slot
+GT5U.machines.special_slot.tooltip.1=§7See recipes for usage
+GT5U.machines.unused_slot.tooltip=Storage Slot
+GT5U.machines.unused_slot.tooltip.1=§7Unused in this machine
+GT5U.machines.fluid_input_slot.tooltip=Fluid Input Tank
+GT5U.machines.fluid_input_slot.tooltip.1=§7%1$d§7L Capacity
+GT5U.machines.fluid_input_slot.tooltip.2=§7Fill with full cells
+GT5U.machines.fluid_input_slot.tooltip.3=§7Drain with empty cells
+GT5U.machines.fluid_output_slot.tooltip=Fluid Output Tank
+GT5U.machines.fluid_output_slot.tooltip.1=§7%1$d§7L Capacity
+GT5U.machines.fluid_output_slot.tooltip.2=§7Drain with empty cells
+GT5U.machines.stalled_stuttering.tooltip=§4Stalled: Insufficient %1$s§4!
+GT5U.machines.stalled_stuttering.tooltip.1=§7Provide %1$s§7 consistently
+GT5U.machines.stalled_stuttering.tooltip.2=§7for the entire duration of
+GT5U.machines.stalled_stuttering.tooltip.3=§7the recipe to complete it.
+GT5U.machines.stalled_stuttering.tooltip.extended=§7Progress was lost, but not
+GT5U.machines.stalled_stuttering.tooltip.extended.1=§7the recipe's output.
+GT5U.machines.stalled_vent.tooltip=§4Stalled: Cannot vent steam!
+GT5U.machines.stalled_vent.tooltip.1=§7Right-click with a wrench to 
+GT5U.machines.stalled_vent.tooltip.2=§7point this machine's steam 
+GT5U.machines.stalled_vent.tooltip.3=§7vent towards an empty space.
+GT5U.machines.stalled_vent.tooltip.extended=§7Progress was lost, but not
+GT5U.machines.stalled_vent.tooltip.extended.1=§7the recipe's output.
 
 GT5U.gui.select.current=Current:
 
@@ -131,6 +178,10 @@ GT5U.config.interface.DisplayCoverTabs=Display Cover Tabs
 GT5U.config.interface.DisplayCoverTabs.tooltip=Displays Cover Tabs on  all Gregtech machines
 GT5U.config.interface.FlipCoverTabs=Flip Cover Tabs
 GT5U.config.interface.FlipCoverTabs.tooltip=Displays Cover Tabs on the right side instead of left
+GT5U.config.interface.TooltipVerbosity=Tooltip verbosity (See details)
+GT5U.config.interface.TooltipVerbosity.tooltip=How verbose should GregTech interface tooltips be?\n0: No tooltips\n1: One line tooltips only\n2: Normal tooltips [DEFAULT]\n3+: Extended tooltips
+GT5U.config.interface.TooltipShiftVerbosity=Tooltip verbosity (LSHIFT Down)
+GT5U.config.interface.TooltipShiftVerbosity.tooltip=How verbose should GregTech interface tooltips be when LSHIFT is held down?\n0: No tooltips\n1: One line tooltips only\n2: Normal tooltips\n3+: Extended tooltips [DEFAULT]
 GT5U.config.preference=Client Preference
 GT5U.config.preference.mInputBusInitialFilter=Input Bus Initial Input Filter Status
 GT5U.config.preference.mInputBusInitialFilter.tooltip=Whether Input busses enable the input filter upon placed\nDoes not affect busses placed by others\nDoes not affect existing busses
