--- a/src/main/resources/assets/gregtech/lang/en_US.lang
+++ b/src/main/resources/assets/gregtech/lang/en_US.lang
@@ -151,6 +151,8 @@ GT5U.hatch.disableSort.true=Sorting mode: OFF
 GT5U.hatch.disableSort.false=Sorting mode: ON
 GT5U.hatch.disableLimited.true=Limiting mode: OFF
 GT5U.hatch.disableLimited.false=Limiting mode: ON
+GT5U.hatch.infiniteCache.true=ME Output bus will infinitely cache item, until you connect it to ME
+GT5U.hatch.infiniteCache.false=ME Output bus will stop accepting items when offline for more than 2 seconds
 
 GT5U.multiblock.pollution=Pollution reduced to
 GT5U.multiblock.energy=Stored Energy
