Add tooltip to recipe filter GUI & improve type filter UI interaction
now you can click special slot in type filter UI to directly set the oreprefix based on the stack held on the cursor

--- a/src/main/resources/assets/gregtech/lang/en_US.lang
+++ b/src/main/resources/assets/gregtech/lang/en_US.lang
@@ -133,6 +133,8 @@ GT5U.machines.stalled_vent.tooltip.3=§7vent towards an empty space.
 GT5U.machines.stalled_vent.tooltip.extended=§7Progress was lost, but not
 GT5U.machines.stalled_vent.tooltip.extended.1=§7the recipe's output.
 
+GT5U.recipe_filter.representation_slot.tooltip=Click with a machine to set filter
+
 GT5U.gui.select.current=Current:
 
 GT5U.item.programmed_circuit.select.header=Reprogram Circuit
