--- a/src/main/resources/assets/gregtech/lang/en_US.lang
+++ b/src/main/resources/assets/gregtech/lang/en_US.lang
@@ -949,7 +949,7 @@ achievement.gt.metaitem.03.32120.desc=Pickup this item to see the recipe in NEI
 
 achievement.item.NanoCircuit=Nano Circuit
 achievement.item.NanoCircuit.desc=Pickup this item to see the recipe in NEI
-achievement.item.PikoCircuit=Piko Circuit
+achievement.item.PikoCircuit=Pico Circuit
 achievement.item.PikoCircuit.desc=Pickup this item to see the recipe in NEI
 achievement.item.QuantumCircuit=Quantum Circuit
 achievement.item.QuantumCircuit.desc=Pickup this item to see the recipe in NEI
