--- a/src/main/resources/assets/goodgenerator/lang/en_US.lang
+++ b/src/main/resources/assets/goodgenerator/lang/en_US.lang
@@ -208,12 +208,18 @@ gui.YOTTank.2=Stored:
 tile.recipe.naquadah_reactor=Large Naquadah Reactor
 tile.naquadah_fuel_refine_factory=Naquadah Fuel Refine Factory
 tile.neutron_activator=Neutron Activator
+tile.extreme_heat_exchanger=Extreme Heat Exchanger
 value.naquadah_reactor=Basic Output Voltage:
 value.naquadah_fuel_refine_factory.0=Need Tier
 value.naquadah_fuel_refine_factory.1= Coil
 value.neutron_activator.0=Minimum Neutron Kinetic Energy:
 value.neutron_activator.1=Maximum Neutron Kinetic Energy:
 value.neutron_activator.2= MeV
+value.extreme_heat_exchanger.0=Max Hot Fluid Input:
+value.extreme_heat_exchanger.1=Max Working Fluid Input:
+value.extreme_heat_exchanger.2=Max Heated Working Fluid Output:
+value.extreme_heat_exchanger.3=Max Overheated Working Fluid Output:
+value.extreme_heat_exchanger.4=Threshold:
 
 #TecTech Structure Info
 FuelRefineFactory.hint.0=8x Field Restriction Glasses
@@ -263,6 +269,12 @@ YOTTank.hint.3=9x Fluid Cell Block for every layer
 YOTTank.hint.4=1 - Input Hatch/YOTTank Casing
 YOTTank.hint.5=2 - Maintenance Hatch/YOTTank Casing
 YOTTank.hint.6=3 - Output Hatch/YOTHatch
+ExtremeHeatExchanger.hint.0=At least 25x Robust Tungstensteel Machine Casings
+ExtremeHeatExchanger.hint.1=1 - Input hatch for distilled water or other working fluid
+ExtremeHeatExchanger.hint.2=2 - Output hatch for SC Steam/SH Steam/Steam or other heated working fluid
+ExtremeHeatExchanger.hint.3=3 - Input hatch for hot fluid
+ExtremeHeatExchanger.hint.4=4 - Output hatch for cold fluid
+ExtremeHeatExchanger.hint.5=Any Casing - Maintenance Hatch
 
 #Chat
 largeessentiagenerator.chat= Installed!
