--- a/src/main/resources/assets/goodgenerator/lang/en_US.lang
+++ b/src/main/resources/assets/goodgenerator/lang/en_US.lang
@@ -70,6 +70,18 @@ item.rodCompressedPlutoniumDepleted4.name=Quad Fuel Rod (Depleted High Density P
 item.rodCompressedPlutonium.name=Fuel Rod (High Density Plutonium)
 item.rodCompressedPlutonium2.name=Dual Fuel Rod (High Density Plutonium)
 item.rodCompressedPlutonium4.name=Quad Fuel Rod (High Density Plutonium)
+item.rodLiquidUraniumDepleted.name=Fuel Rod (Depleted Excited Uranium)
+item.rodLiquidUraniumDepleted2.name=Dual Fuel Rod (Depleted Excited Uranium)
+item.rodLiquidUraniumDepleted4.name=Quad Fuel Rod (Depleted Excited Uranium)
+item.rodLiquidUranium.name=Fuel Rod (Excited Uranium)
+item.rodLiquidUranium2.name=Dual Fuel Rod (Excited Uranium)
+item.rodLiquidUranium4.name=Quad Fuel Rod (Excited Uranium)
+item.rodLiquidPlutoniumDepleted.name=Fuel Rod (Depleted Excited Plutonium)
+item.rodLiquidPlutoniumDepleted2.name=Dual Fuel Rod (Depleted Excited Plutonium)
+item.rodLiquidPlutoniumDepleted4.name=Quad Fuel Rod (Depleted Excited Plutonium)
+item.rodLiquidPlutonium.name=Fuel Rod (Excited Plutonium)
+item.rodLiquidPlutonium2.name=Dual Fuel Rod (Excited Plutonium)
+item.rodLiquidPlutonium4.name=Quad Fuel Rod (Excited Plutonium)
 item.advancedFuelRod.name=Advanced Fuel Rod (Empty)
 item.fluidCore.0.name=Fluid Storage Core T1
 item.fluidCore.1.name=Fluid Storage Core T2
