fix fuel rod tooltip and damage stuff

--- a/src/main/resources/assets/goodgenerator/lang/en_US.lang
+++ b/src/main/resources/assets/goodgenerator/lang/en_US.lang
@@ -108,6 +108,9 @@ naquadriaMass.tooltip.0=What?
 EssentiaHatch.tooltip.0=You can right click it with an Essentia Jar to set Essentia Filter.
 EssentiaHatch.tooltip.1=Right click it with empty hands to clear the Filter.
 fuelrod.tooltip.0=Durability: %s/%s
+fuelrodheat.tooltip.0=Has the same heat output as uranium
+fuelrodheat.tooltip.1=The heat output is %s times than uranium
+fuelrodheat.tooltip.2=Has Mox Behaviour
 depletedfuelrod.tooltip.0=Depleted
 YOTTankCell.tooltip.0=Capacity:
 hatchTier.tooltip.0=Hatch Tier:
