Separate EM to new tab
(cherry picked from commit caff4351909ce59637348c6be94271cf1d1c0a9c)

--- a/src/main/java/com/github/technus/tectech/mechanics/elementalMatter/README
+++ b/src/main/java/com/github/technus/tectech/mechanics/elementalMatter/README
@@ -42,3 +42,6 @@ Trees:
  InstanceStack - inst stack
  |||||multiple to 1
  InstanceStackTree - inst container - real things go here
+
+ Preset for world:
+ 2;7,16x22,16x35:11,16x35:3,16x35;0;
