--- a/src/main/resources/assets/tectech/lang/en_US.lang
+++ b/src/main/resources/assets/tectech/lang/en_US.lang
@@ -1,5 +1,6 @@
 #Creative Tab Name
 itemGroup.TecTech=TecTech Interdimensional
+itemGroup.EM=TecTech Elemental Matter
 
 #Blocks
 tile.quantumStuff.name=Quantum Stuff
