--- a/src/main/resources/assets/tectech/lang/en_US.lang
+++ b/src/main/resources/assets/tectech/lang/en_US.lang
@@ -948,8 +948,266 @@ tt.keyword.Chaos=Chaos
 tt.keyword.Primal=Primal
 tt.keyword.Aspect=Aspect
 
+tt.element.Neutronium=Neutronium
+tt.element.Hydrogen=Hydrogen
+tt.element.Helium=Helium
+tt.element.Lithium=Lithium
+tt.element.Beryllium=Beryllium
+tt.element.Boron=Boron
+tt.element.Carbon=Carbon
+tt.element.Nitrogen=Nitrogen
+tt.element.Oxygen=Oxygen
+tt.element.Fluorine=Fluorine
+tt.element.Neon=Neon
+tt.element.Sodium=Sodium
+tt.element.Magnesium=Magnesium
+tt.element.Aluminium=Aluminium
+tt.element.Silicon=Silicon
+tt.element.Phosphorus=Phosphorus
+tt.element.Sulfur=Sulfur
+tt.element.Chlorine=Chlorine
+tt.element.Argon=Argon
+tt.element.Potassium=Potassium
+tt.element.Calcium=Calcium
+tt.element.Scandium=Scandium
+tt.element.Titanium=Titanium
+tt.element.Vanadium=Vanadium
+tt.element.Chromium=Chromium
+tt.element.Manganese=Manganese
+tt.element.Iron=Iron
+tt.element.Cobalt=Cobalt
+tt.element.Nickel=Nickel
+tt.element.Copper=Copper
+tt.element.Zinc=Zinc
+tt.element.Gallium=Gallium
+tt.element.Germanium=Germanium
+tt.element.Arsenic=Arsenic
+tt.element.Selenium=Selenium
+tt.element.Bromine=Bromine
+tt.element.Krypton=Krypton
+tt.element.Rubidium=Rubidium
+tt.element.Strontium=Strontium
+tt.element.Yttrium=Yttrium
+tt.element.Zirconium=Zirconium
+tt.element.Niobium=Niobium
+tt.element.Molybdenum=Molybdenum
+tt.element.Technetium=Technetium
+tt.element.Ruthenium=Ruthenium
+tt.element.Rhodium=Rhodium
+tt.element.Palladium=Palladium
+tt.element.Silver=Silver
+tt.element.Cadmium=Cadmium
+tt.element.Indium=Indium
+tt.element.Tin=Tin
+tt.element.Antimony=Antimony
+tt.element.Tellurium=Tellurium
+tt.element.Iodine=Iodine
+tt.element.Xenon=Xenon
+tt.element.Caesium=Caesium
+tt.element.Barium=Barium
+tt.element.Lanthanum=Lanthanum
+tt.element.Cerium=Cerium
+tt.element.Praseodymium=Praseodymium
+tt.element.Neodymium=Neodymium
+tt.element.Promethium=Promethium
+tt.element.Samarium=Samarium
+tt.element.Europium=Europium
+tt.element.Gadolinium=Gadolinium
+tt.element.Terbium=Terbium
+tt.element.Dysprosium=Dysprosium
+tt.element.Holmium=Holmium
+tt.element.Erbium=Erbium
+tt.element.Thulium=Thulium
+tt.element.Ytterbium=Ytterbium
+tt.element.Lutetium=Lutetium
+tt.element.Hafnium=Hafnium
+tt.element.Tantalum=Tantalum
+tt.element.Tungsten=Tungsten
+tt.element.Rhenium=Rhenium
+tt.element.Osmium=Osmium
+tt.element.Iridium=Iridium
+tt.element.Platinum=Platinum
+tt.element.Gold=Gold
+tt.element.Mercury=Mercury
+tt.element.Thallium=Thallium
+tt.element.Lead=Lead
+tt.element.Bismuth=Bismuth
+tt.element.Polonium=Polonium
+tt.element.Astatine=Astatine
+tt.element.Radon=Radon
+tt.element.Francium=Francium
+tt.element.Radium=Radium
+tt.element.Actinium=Actinium
+tt.element.Thorium=Thorium
+tt.element.Protactinium=Protactinium
+tt.element.Uranium=Uranium
+tt.element.Neptunium=Neptunium
+tt.element.Plutonium=Plutonium
+tt.element.Americium=Americium
+tt.element.Curium=Curium
+tt.element.Berkelium=Berkelium
+tt.element.Californium=Californium
+tt.element.Einsteinium=Einsteinium
+tt.element.Fermium=Fermium
+tt.element.Mendelevium=Mendelevium
+tt.element.Nobelium=Nobelium
+tt.element.Lawrencium=Lawrencium
+tt.element.Rutherfordium=Rutherfordium
+tt.element.Dubnium=Dubnium
+tt.element.Seaborgium=Seaborgium
+tt.element.Bohrium=Bohrium
+tt.element.Hassium=Hassium
+tt.element.Meitnerium=Meitnerium
+tt.element.Darmstadtium=Darmstadtium
+tt.element.Roentgenium=Roentgenium
+tt.element.Copernicium=Copernicium
+tt.element.Nihonium=Nihonium
+tt.element.Flerovium=Flerovium
+tt.element.Moscovium=Moscovium
+tt.element.Livermorium=Livermorium
+tt.element.Tennessine=Tennessine
+tt.element.Oganesson=Oganesson
 
+tt.element.AntiNeutronium=Antineutronium
+tt.element.AntiHydrogen=Antihydrogen
+tt.element.AntiHelium=Antihelium
+tt.element.AntiLithium=Antilithium
+tt.element.AntiBeryllium=Antiberyllium
+tt.element.AntiBoron=Antiboron
+tt.element.AntiCarbon=Anticarbon
+tt.element.AntiNitrogen=Antinitrogen
+tt.element.AntiOxygen=Antioxygen
+tt.element.AntiFluorine=Antifluorine
+tt.element.AntiNeon=Antineon
+tt.element.AntiSodium=Antisodium
+tt.element.AntiMagnesium=Antimagnesium
+tt.element.AntiAluminium=Antialuminium
+tt.element.AntiSilicon=Antisilicon
+tt.element.AntiPhosphorus=Antiphosphorus
+tt.element.AntiSulfur=Antisulfur
+tt.element.AntiChlorine=Antichlorine
+tt.element.AntiArgon=Antiargon
+tt.element.AntiPotassium=Antipotassium
+tt.element.AntiCalcium=Anticalcium
+tt.element.AntiScandium=Antiscandium
+tt.element.AntiTitanium=Antititanium
+tt.element.AntiVanadium=Antivanadium
+tt.element.AntiChromium=Antichromium
+tt.element.AntiManganese=Antimanganese
+tt.element.AntiIron=Antiiron
+tt.element.AntiCobalt=Anticobalt
+tt.element.AntiNickel=Antinickel
+tt.element.AntiCopper=Anticopper
+tt.element.AntiZinc=Antizinc
+tt.element.AntiGallium=Antigallium
+tt.element.AntiGermanium=Antigermanium
+tt.element.AntiArsenic=Antiarsenic
+tt.element.AntiSelenium=Antiselenium
+tt.element.AntiBromine=Antibromine
+tt.element.AntiKrypton=Antikrypton
+tt.element.AntiRubidium=Antirubidium
+tt.element.AntiStrontium=Antistrontium
+tt.element.AntiYttrium=Antiyttrium
+tt.element.AntiZirconium=Antizirconium
+tt.element.AntiNiobium=Antiniobium
+tt.element.AntiMolybdenum=Antimolybdenum
+tt.element.AntiTechnetium=Antitechnetium
+tt.element.AntiRuthenium=Antiruthenium
+tt.element.AntiRhodium=Antirhodium
+tt.element.AntiPalladium=Antipalladium
+tt.element.AntiSilver=Antisilver
+tt.element.AntiCadmium=Anticadmium
+tt.element.AntiIndium=Antiindium
+tt.element.AntiTin=Antitin
+tt.element.AntiAntimony=Antiantimony
+tt.element.AntiTellurium=Antitellurium
+tt.element.AntiIodine=Antiiodine
+tt.element.AntiXenon=Antixenon
+tt.element.AntiCaesium=Anticaesium
+tt.element.AntiBarium=Antibarium
+tt.element.AntiLanthanum=Antilanthanum
+tt.element.AntiCerium=Anticerium
+tt.element.AntiPraseodymium=Antipraseodymium
+tt.element.AntiNeodymium=Antineodymium
+tt.element.AntiPromethium=Antipromethium
+tt.element.AntiSamarium=Antisamarium
+tt.element.AntiEuropium=Antieuropium
+tt.element.AntiGadolinium=Antigadolinium
+tt.element.AntiTerbium=Antiterbium
+tt.element.AntiDysprosium=Antidysprosium
+tt.element.AntiHolmium=Antiholmium
+tt.element.AntiErbium=Antierbium
+tt.element.AntiThulium=Antithulium
+tt.element.AntiYtterbium=Antiytterbium
+tt.element.AntiLutetium=Antilutetium
+tt.element.AntiHafnium=Antihafnium
+tt.element.AntiTantalum=Antitantalum
+tt.element.AntiTungsten=Antitungsten
+tt.element.AntiRhenium=Antirhenium
+tt.element.AntiOsmium=Antiosmium
+tt.element.AntiIridium=Antiiridium
+tt.element.AntiPlatinum=Antiplatinum
+tt.element.AntiGold=Antigold
+tt.element.AntiMercury=Antimercury
+tt.element.AntiThallium=Antithallium
+tt.element.AntiLead=Antilead
+tt.element.AntiBismuth=Antibismuth
+tt.element.AntiPolonium=Antipolonium
+tt.element.AntiAstatine=Antiastatine
+tt.element.AntiRadon=Antiradon
+tt.element.AntiFrancium=Antifrancium
+tt.element.AntiRadium=Antiradium
+tt.element.AntiActinium=Antiactinium
+tt.element.AntiThorium=Antithorium
+tt.element.AntiProtactinium=Antiprotactinium
+tt.element.AntiUranium=Antiuranium
+tt.element.AntiNeptunium=Antineptunium
+tt.element.AntiPlutonium=Antiplutonium
+tt.element.AntiAmericium=Antiamericium
+tt.element.AntiCurium=Anticurium
+tt.element.AntiBerkelium=Antiberkelium
+tt.element.AntiCalifornium=Antibalifornium
+tt.element.AntiEinsteinium=Antieinsteinium
+tt.element.AntiFermium=Antifermium
+tt.element.AntiMendelevium=Antimendelevium
+tt.element.AntiNobelium=Antinobelium
+tt.element.AntiLawrencium=Antilawrencium
+tt.element.AntiRutherfordium=Antirutherfordium
+tt.element.AntiDubnium=Antidubnium
+tt.element.AntiSeaborgium=Antiseaborgium
+tt.element.AntiBohrium=Antibohrium
+tt.element.AntiHassium=Antihassium
+tt.element.AntiMeitnerium=Antimeitnerium
+tt.element.AntiDarmstadtium=Antidarmstadtium
+tt.element.AntiRoentgenium=Antiroentgenium
+tt.element.AntiCopernicium=Anticopernicium
+tt.element.AntiNihonium=Antinihonium
+tt.element.AntiFlerovium=Antiflerovium
+tt.element.AntiMoscovium=Antimoscovium
+tt.element.AntiLivermorium=Antilivermorium
+tt.element.AntiTennessine=Antitennessine
+tt.element.AntiOganesson=Antioganesson
 
-
-
-
+tt.IUPAC.n=nil
+tt.IUPAC.u=un
+tt.IUPAC.b=bi
+tt.IUPAC.t=tri
+tt.IUPAC.q=quad
+tt.IUPAC.p=pent
+tt.IUPAC.h=hex
+tt.IUPAC.s=sept
+tt.IUPAC.o=oct
+tt.IUPAC.e=enn
+tt.IUPAC.N=Nil
+tt.IUPAC.U=Un
+tt.IUPAC.B=Bi
+tt.IUPAC.T=Tri
+tt.IUPAC.Q=Quad
+tt.IUPAC.P=Pent
+tt.IUPAC.H=Hex
+tt.IUPAC.S=Sept
+tt.IUPAC.O=Oct
+tt.IUPAC.E=Enn
+tt.IUPAC.ium=ium
+tt.IUPAC.Anti=Anti
+tt.keyword.Weird=*
