--- a/src/main/resources/assets/miscutils/lang/en_US.lang
+++ b/src/main/resources/assets/miscutils/lang/en_US.lang
@@ -3369,3 +3369,9 @@ item.FrothMonaziteflotation.name=Monazite Flotation Froth Cell
 //Added 18/12/21
 item.BasicGenericChemItem.13.name=Formaldehyde Catalyst
 item.hydrogenchloridemix.name=Hydrogen Chlorine Mix
+
+//Added 29/01/22
+sleep.event.okay=You slept well and now feel a little better.
+sleep.event.good=You slept well and now feel much better.
+sleep.event.wellrested=You feel really well rested.
+sleep.event.downsides=The downsides of life no longer effect you.
