Fixed Magic Feather death handling. Improved Magic Feather beacon handling.

--- a/src/main/resources/assets/miscutils/lang/en_US.lang
+++ b/src/main/resources/assets/miscutils/lang/en_US.lang
@@ -3375,3 +3375,4 @@ sleep.event.okay=You slept well and now feel a little better.
 sleep.event.good=You slept well and now feel much better.
 sleep.event.wellrested=You feel really well rested.
 sleep.event.downsides=The downsides of life no longer effect you.
+item.miscutils:magicfeather.name=Magical Feather
