allow multi output for yottank

--- a/src/main/resources/assets/goodgenerator/lang/en_US.lang
+++ b/src/main/resources/assets/goodgenerator/lang/en_US.lang
@@ -287,7 +287,8 @@ YOTTank.hint.2=16x Borosilicate Glass Block of the same tier for every layer
 YOTTank.hint.3=9x Fluid Cell Block for every layer
 YOTTank.hint.4=1 - Input Hatch/YOTTank Casing
 YOTTank.hint.5=2 - Maintenance Hatch/YOTTank Casing
-YOTTank.hint.6=3 - Output Hatch/YOTHatch
+YOTTank.hint.6=3 - Output Hatch/YOTHatch/YOTTank Casing
+YOTTank.hint.7=Only one YOTHatch allowed per YOTTank.
 ExtremeHeatExchanger.hint.0=At least 25x Robust Tungstensteel Machine Casings
 ExtremeHeatExchanger.hint.1=1 - Input hatch for distilled water
 ExtremeHeatExchanger.hint.2=2 - Output hatch for SC Steam/SH Steam/Steam
