two new materials and wire

--- a/src/main/resources/assets/goodgenerator/lang/en_US.lang
+++ b/src/main/resources/assets/goodgenerator/lang/en_US.lang
@@ -99,6 +99,7 @@ item.upgradeEssentia.6.name=§bEssentia Generator: Mechanics§r
 item.upgradeEssentia.7.name=§6Essentia Generator: Spirit§r
 item.upgradeEssentia.8.name=§aEssentia Generator: Radiation§r
 item.upgradeEssentia.9.name=§3Essentia Generator: Electric§r
+item.highEnergyMixture.0.name=High Energy Mixture
 
 #Tooltip
 inverter.tooltip.0=Turn DC into AC.
